--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,18 @@
   <!-- 这是容器 -->
   <div id="app"></div>
 </body>
+<script>
+  let f1 = function () {
+    console.log("fun函数");
+  }
+  let f2 = () => {
+    console.log("箭头函数");
+
+  }
+  f1();
+  f2();
+
+
+</script>
 
 </html>
